# ToroidalField

./: .gitignore  README.md  _requirements.txt  _setup.py  meson.build  meson_pyproject.toml  pyproject.toml  requirements.txt  setup.py
example/datas/SPECDatas/: LandremanPaul2021_QA.sp
example/vmec2Boozer/: example.ipynb
example/vmecout/: vmecout.ipynb
notes/geometry/: surface.ipynb
notes/toroidalField/: toroidalField.ipynb
tfpy/: __init__.py  config.py  meson.build
tfpy/boozXform/: boozerForm.py  meson.build
tfpy/geometry/: __init__.py  axisCylindricalAngle.py  meson.build  potentialBoozerAngle.py  potentialCylinderAngle.py  surface.py  surfaceBoozerAngle.py  surfaceCylindricalAngle.py
tfpy/misc/: meson.build
tfpy/spec/: __init__.py  meson.build
tfpy/spec/specLaplaceField/: meson.build
tfpy/spec/specNamelist/: meson.build
tfpy/spec/specOut/: meson.build
tfpy/spec/specVacuumField/: meson.build  vacuumField.py
tfpy/toroidalField/: __init__.py  field.py  meson.build  misc.py  miscField.py  reciprocal.py  reverseAngle.py
tfpy/vmec/: _plotCrossSection.py  _plotProfile.py  _vmecTransform.py  meson.build  vmecOut.py
tfpy/vmec2spec/: meson.build
