[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tfpy"
version = "2.1.0"
description = "A personal Python package for processing toroidal field"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GNU 3.0" }
authors = [
    { name = "Ke Liu", email = "lk2020@mail.ustc.edu.cn" },
]
maintainers = [
    { name = "Ke Liu", email = "lk2020@mail.ustc.edu.cn" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "xarray",
    "py_spec",
    "booz_xform",
    "h5py",
    "cmap",
]

[project.urls]
Homepage = "https://github.com/USTCstellarators/ToroidalField"

[tool.setuptools.packages.find]
where = ["."]
include = ["tfpy*"]